<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".SelectorFragment">

    <ImageView
        android:id="@+id/iv_selector"
        android:layout_width="@dimen/width_343dp"
        android:layout_height="@dimen/height_340dp"
        android:src="@drawable/img_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_56dp"
        android:contentDescription="@string/label_selector_image" />

    <TextView
        android:id="@+id/tv_selector_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_72dp"
        android:text="@string/label_title_selector"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Wakey.BodyLarge.Bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_selector" />

    <TextView
        android:id="@+id/tv_selector_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_selector_description"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.Wakey.BodyMedium.Regular"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selector_title"
        android:layout_marginTop="@dimen/margin_32dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_selector_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_selector_description" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="@dimen/width_170dp"
            android:layout_height="@dimen/height_56dp"
            android:text="@string/label_signup"
            android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
            android:textColor="@color/white"
            android:layout_marginStart="-16dp"
            app:layout_constraintStart_toEndOf="@id/btn_signin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_32dp"
            android:background="@drawable/bg_button_register"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="@dimen/width_170dp"
            android:layout_height="@dimen/height_56dp"
            android:text="@string/label_sigin"
            android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_32dp"
            android:background="@drawable/bg_button_gradient"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>