<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_hii_there"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.Wakey.BodyLarge.Bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_56dp" />


    <TextView
        android:id="@+id/tv_login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_login_desc"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
        android:layout_marginTop="@dimen/margin_8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin_4dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_description"
        android:background="@drawable/bg_button_register"
        android:layout_marginTop="@dimen/margin_64dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tit_username_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_username"
            android:background="@android:color/transparent"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin_4dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/til_username_login"
        android:background="@drawable/bg_button_register"
        android:layout_marginTop="@dimen/margin_24dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tit_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:background="@android:color/transparent"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_forgot_password"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/til_password_login"
        android:layout_marginTop="@dimen/margin_12dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_signin_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        android:layout_marginTop="@dimen/margin_32dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:text="@string/label_sigin"
            android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:background="@drawable/bg_button_gradient"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/v_or_left"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        app:layout_constraintTop_toBottomOf="@+id/cl_signin_buttons"
        android:layout_marginTop="@dimen/margin_48dp"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/v_or_left"
        app:layout_constraintTop_toTopOf="@id/v_or_left"
        app:layout_constraintTop_toBottomOf="@+id/cl_signin_buttons"
        app:layout_constraintBottom_toBottomOf="@id/v_or_left"
        android:text="@string/label_or"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular" />

    <View
        android:id="@+id/v_or_right"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toBottomOf="@id/cl_signin_buttons"
        app:layout_constraintTop_toTopOf="@id/tv_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_social_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        android:layout_marginTop="@dimen/margin_24dp" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_apple"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:background="@drawable/btn_apple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/btn_login_google"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_google"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:background="@drawable/btn_google"
            app:layout_constraintStart_toEndOf="@+id/btn_login_apple"
            android:layout_marginStart="@dimen/margin_24dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@id/btn_login_facebook"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_facebook"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:background="@drawable/btn_facebook"
            app:layout_constraintStart_toEndOf="@+id/btn_login_google"
            android:layout_marginStart="@dimen/margin_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_don_t_have_an_account"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_social_login"
        app:layout_constraintEnd_toStartOf="@+id/tv_signup"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="@dimen/margin_56dp" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_signup"
        android:textColor="@color/gradient_end"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
        app:layout_constraintStart_toEndOf="@+id/tv_dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dont_have_account"
        android:layout_marginStart="@dimen/margin_4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>